Fix for bug 15201. We need to convert back the result from UTF-8 to Unicode. R=mscott, bienvenu